--- a/Artemis.project
+++ b/Artemis.project
@@ -14,6 +14,9 @@
     <File Name="src/Component.h"/>
     <File Name="src/EntitySystem.h"/>
     <File Name="src/EntitySystem.cpp"/>
+    <VirtualDirectory Name="util">
+      <File Name="src/ImmutableBag.h"/>
+    </VirtualDirectory>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
